Kubernetes-notes/cmd-variable.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cmd-variable
  labels:
    purpose: demonstrate-command
spec:
  containers:
  - name: command-demo-container
    image: debian
    command: ["/bin/echo"]
    args: ["$(MESSAGE)"]
  restartPolicy: OnFailure
