Kubernetes-notes/def.yaml
apiVersion: v1
kind: Pod
metadata:
  name: vproapp
  labels:
    app: vproapp
spec:
  containers:
    - name: appcontainer
      image: mbadwa/vprofileweb
      ports:
        - name: vproapp-port
          containerPort: 80
