Kubernetes-notes/mysql-defs.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dbpod
spec:
  containers:
  - image: mysql:5.7
    name: mysql
    ports:
    - containerPort: 3306
      name: dbpod
    volumeMounts:
      - mountPath: /var/lib/mysql
        name: dbvol
  volumes:
  - name: dbvol
    hostPath:
      # directory Location on host
      path: /data
      # this field is optional
      type: DirectoryOrCreate
