Kubernetes-notes/nginxdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: nginxdep
  name: nginxdep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginxdep
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginxdep
    spec:
      containers:
      - image: nginx
        name: nginx
        resources: {}
status: {}
