Kubernetes-notes/pod2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-01
  namespace: kubekart
spec:
  containers:
  - name: nginx
    image: nginix:1.14.2
    ports:
    - containerPort: 80
