Kubernetes-notes/readsecret.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: secret-env-pod
spec:
  containers:
  - name: mycontainer
    image: redis
  restartPolicy: Never
