Kubernetes-notes/web-app-defs.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: vproapp
  labels:
    app: vproapp
spec:
   containers:
     - name: webapp-container
       image: mbadwa/vprofileweb
       ports:
         - name: vproapp-port
           containerPort: 8080
