Kubernetes-notes/service-defs.yml
apiVersion: v1
kind: Service
metadata:
  labels: 
    app: webapp-service
  name: webapp-service
  spec:
    type: NodePort
    ports:
    - targetPort: 80
      port: 80
      nodePort: 30005
      protocol: TCP
    selector:
      app: frontend
