Kubernetes-notes/tom-svc-clusterip.yml
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  type: ClusterIP
  ports:
  - targetPort: 8080
    port: 8080
    protocol: TCP
  selector:
    app: backend
