Kubernetes-notes/vproapp-nodeport.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
spec:
  type: NodePort
  ports:
    - port: 8090
      nodePort: 30001
      targetPort: vproapp-port
      protocol: TCP
  selector:
    app: vproapp
